--- a/index.html
+++ b/index.html
@@ -2,251 +2,152 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Secure Text Converter</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Security Text by Ransara Devnath</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Pacifico&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+
   <style>
-:root {
-      --bg-color: #121212;
-      --card-color: #1e1e1e;
-      --text-color: #ffffff;
-      --accent-color: #00c9a7;
-      --accent-hover: #00a388;
-}
-
     body {
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      font-family: 'Poppins', sans-serif;
-      padding: 2rem;
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #2e005e, #001f3f);
+      color: #fff;
       text-align: center;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      animation: glow 3s ease-in-out infinite alternate;
 }
 
-    h1 {
-      margin-bottom: 0.5rem;
+    @keyframes glow {
+      from { text-shadow: 0 0 5px #fff;}
+      to { text-shadow: 0 0 20px #00f2ff, 0 0 30px #ff00f2;}
 }
 
-.welcome-text {
-      font-size: 1.4rem;
-      margin-bottom: 1.2rem;
-      animation: glowLoop 4s ease-in-out infinite;
-      color: var(--accent-color);
-      text-shadow: 0 0 5px var(--accent-color), 0 0 10px var(--accent-color), 0 0 20px var(--accent-color);
+.container {
+      padding: 20px;
 }
 
-    @keyframes glowLoop {
-      0%, 100% {
-        text-shadow: 0 0 5px var(--accent-color), 0 0 10px var(--accent-color), 0 0 20px var(--accent-color);
-}
-      50% {
-        text-shadow: 0 0 10px #00fff0, 0 0 20px #00fff0, 0 0 30px #00fff0;
-}
-}
-
-    textarea, input,.fancy-text {
-      width: 100%;
-      max-width: 500px;
+    textarea, select {
       padding: 10px;
+      margin: 10px 0;
       border: none;
       border-radius: 5px;
-      background-color: var(--card-color);
-      color: var(--text-color);
-      resize: none;
-      margin-top: 10px;
+      width: 90%;
+      max-width: 400px;
+      font-size: 16px;
+}
+
+    #outputText {
+      margin-top: 20px;
+      white-space: pre-wrap;
+      font-size: 18px;
+      padding: 15px;
+      word-wrap: break-word;
 }
 
     button {
-      margin: 1rem 0.4rem;
-      padding: 10px 18px;
-      background-color: var(--accent-color);
+      background-color: #229ED9;
       color: white;
+      padding: 10px 20px;
       border: none;
-      border-radius: 4px;
-      font-weight: bold;
+      border-radius: 25px;
       cursor: pointer;
+      font-size: 16px;
+      margin: 5px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.3);
+      transition: all 0.3s ease;
 }
 
     button:hover {
-      background-color: var(--accent-hover);
+      background-color: #1b8dc3;
+      transform: scale(1.05);
 }
 
-    #output {
-      margin-top: 1rem;
-      padding: 1rem;
-      background-color: var(--card-color);
-      border-radius: 5px;
-      word-break: break-word;
-}
-
-    #loader {
-      display: none;
-      margin-top: 1rem;
-      font-size: 1.1rem;
-      color: var(--accent-color);
-      animation: pulse 1.5s infinite;
-}
-
-    @keyframes pulse {
-      0% { opacity: 0.2;}
-      50% { opacity: 1;}
-      100% { opacity: 0.2;}
-}
-
-    #charCount {
-      margin-top: 0.4rem;
-      color: #bbb;
-      font-size: 0.9rem;
-}
-
-.fancy-text:hover {
-      background-color: var(--accent-hover);
-      color: white;
-}
-
-    footer {
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      color: #888;
-}
-
-    @media (max-width: 600px) {
-      body {
-        padding: 1rem;
-}
-
-      button {
-        width: 100%;
-        margin: 0.5rem 0;
-}
-
-.fancy-text {
-        font-size: 1rem;
-}
+.footer {
+      margin-top: 30px;
+      font-size: 14px;
+      opacity: 0.6;
 }
   </style>
 </head>
 <body>
-  <h1>🔐 Secure Text Converter</h1>
-  <h2 class="welcome-text">👋 Welcome to Secure Text Converter</h2>
+  <div class="container">
+    <h1>🔐 Security Text</h1>
+    <textarea id="inputText" placeholder="Enter your text..."></textarea><br/>
 
-  <textarea id="textInput" placeholder="Type or paste your message..."></textarea>
-  <div id="charCount">Characters: 0</div>
+    <button onclick="encrypt()">Encrypt</button>
+    <button onclick="decrypt()">Decrypt</button><br/>
 
-  <br />
-  <button onclick="encryptText()">Encrypt</button>
-  <button onclick="decryptText()">Decrypt</button>
-  <button onclick="copyText()">Copy</button>
-  <button onclick="clearFields()">Clear</button>
+    <select id="fontSelect" onchange="changeFont()">
+      <option value="Segoe UI">Segoe UI</option>
+      <option value="Courier New">Courier New</option>
+      <option value="Comic Sans MS">Comic Sans</option>
+      <option value="Lucida Console">Lucida Console</option>
+      <option value="Impact">Impact</option>
+      <option value="Verdana">Verdana</option>
+      <option value="'Brush Script MT', cursive">Brush Script</option>
+      <option value="'Trebuchet MS', sans-serif">Trebuchet MS</option>
+      <option value="'Gill Sans', sans-serif">Gill Sans</option>
+      <option value="'Franklin Gothic Medium', sans-serif">Franklin Gothic</option>
+      <option value="'Pacifico', cursive">Pacifico</option>
+      <option value="'Orbitron', sans-serif">Orbitron</option>
+      <option value="'Shadows Into Light', cursive">Shadows Into Light</option>
+    </select>
 
-  <div id="loader">🔄 Processing...</div>
-  <div id="output"></div>
+    <div id="outputText"></div>
+    <button onclick="copyStyledText()">Copy</button>
+  </div>
 
-  <hr style="margin: 2rem 0;" />
-
-  <h2>✒️ Unicode Font Changer</h2>
-  <input type="text" id="unicodeInput" placeholder="Enter your text..." />
-  <div id="fontResults"></div>
-
-  <footer>
-    Developed by <strong>Ransara Devnath</strong> © 2025
-  </footer>
+  <div class="footer">Created by Ransara Devnath</div>
 
   <script>
-    const input = document.getElementById('textInput');
-    const charCount = document.getElementById('charCount');
-   input.addEventListener('input', () => {
-      charCount.innerText = 'Characters: ' + input.value.length;
-});
-
-    document.getElementById("output").onclick = function () {
-      const range = document.createRange();
-      range.selectNode(this);
-      window.getSelection().removeAllRanges();
-      window.getSelection().addRange(range);
-};
-
-    function encryptText() {
-      const text = input.value;
-      showLoader();
-      setTimeout(() => {
-        const encrypted = btoa(text);
-        document.getElementById('output').innerText = "🔒 Encrypted: " + encrypted;
-        hideLoader();
-}, 1000);
+    function encrypt() {
+      let text = document.getElementById("inputText").value;
+      let result = btoa(text);
+      showOutput(result);
 }
 
-    function decryptText() {
-      const encrypted = input.value;
-      showLoader();
-      setTimeout(() => {
-        try {
-          const decrypted = atob(encrypted);
-          document.getElementById('output').innerText = "🔓 Decrypted: " + decrypted;
-} catch (e) {
-          document.getElementById('output').innerText = "⚠️ Invalid Base64 string!";
+    function decrypt() {
+      let text = document.getElementById("inputText").value;
+      try {
+        let result = atob(text);
+        showOutput(result);
+} catch {
+        showOutput("❌ Invalid encoded text");
 }
-        hideLoader();
-}, 1000);
 }
 
-    function copyText() {
-      const output = document.getElementById('output').innerText;
-      if (!output) {
-        alert("There's no text to copy!");
-        return;
-}
-      const temp = document.createElement("textarea");
-      temp.value = output;
-      document.body.appendChild(temp);
-      temp.select();
-      document.execCommand("copy");
-      document.body.removeChild(temp);
-      alert("✅ Text copied to clipboard!");
+    function changeFont() {
+      let font = document.getElementById("fontSelect").value;
+      document.getElementById("outputText").style.fontFamily = font;
 }
 
-    function clearFields() {
-      input.value = '';
-      document.getElementById('output').innerText = '';
-      charCount.innerText = 'Characters: 0';
-      hideLoader();
+    function showOutput(text) {
+      let output = document.getElementById("outputText");
+      output.innerText = text;
+      changeFont();
 }
 
-    function showLoader() {
-      document.getElementById('loader').style.display = 'block';
-      document.getElementById('output').innerText = '';
+    function copyStyledText() {
+      let range = document.createRange();
+      let output = document.getElementById("outputText");
+      range.selectNodeContents(output);
+      let selection = window.getSelection();
+      selection.removeAllRanges();
+      selection.addRange(range);
+      try {
+        document.execCommand("copy");
+        alert("Copied with style! 🎉");
+} catch {
+        alert("Copy failed.");
 }
-
-    function hideLoader() {
-      document.getElementById('loader').style.display = 'none';
+      selection.removeAllRanges();
 }
-
-    // Unicode Font Changer
-    document.getElementById('unicodeInput').addEventListener('input', function () {
-      const text = this.value;
-      const results = document.getElementById('fontResults');
-      results.innerHTML = '';
-
-      const styles = [
-        t => [...t].map(c => c.match(/[A-Za-z]/)? String.fromCharCode(0x1D400 + c.toUpperCase().charCodeAt(0) - 65): c).join(''),
-        t => [...t].map(c => c.match(/[a-z]/)? String.fromCharCode(0x1D41A + c.charCodeAt(0) - 97): c).join(''),
-        t => t.toUpperCase().split('').map(l => l.match(/[A-Z]/)? String.fromCharCode(0x24B6 + (l.charCodeAt(0) - 65)): l).join(''),
-        t => t.split('').reverse().join('')
-      ];
-
-      styles.forEach(format => {
-        try {
-          const fancy = format(text);
-          const div = document.createElement('div');
-          div.className = 'fancy-text';
-          div.innerText = fancy;
-          div.onclick = () => {
-            navigator.clipboard.writeText(fancy);
-            alert("📋 Copied to clipboard!");
-};
-          results.appendChild(div);
-} catch {}
-});
-});
   </script>
 </body>
 </html>
